# threads-py

./: .gitignore  BLOG.md  README.md  README.zh-TW.md  pyproject.toml
src/threads_py/: __init__.py  client.py
tests/: test_basic.py
